--- a/demo.html
+++ b/demo.html
@@ -21,14 +21,7 @@
 		</style>
 	</head>
 	<body>
-		分支管理策略
-
-		master
-		在这里修复bug
-		suudeff
-		100
-		12837289
-		<p>dev分支，将会被储藏起来</p>
+		me change
 
 	</body>
 
